<resources>
    <string name="welcome_login">欢迎使用天气预报，祝您风调雨顺！</string>
    <string name="app_name">WeatherForecast</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="account_hint">请在此处输入账号</string>
    <string name="password_hint">请在此处输入密码</string>
    <string name="no_account">还没有账号？</string>
    <string name="login">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="automatic_login">自动登录</string>

    <string name="welcome_register">欢迎使用天气预报，请注册你的账号！</string>
    <string name="account_register">账\u3000\u3000号:</string>
    <string name="password_register">密\u3000\u3000码:</string>
    <string name="password_ensure">确认密码:</string>
    <string name="password_ensure_hint">请再次确认密码</string>
    <string name="user_agreement">同意用户协议</string>
    <string name="register">注册</string>

    <string name="weather_hint">左右滑动以查看不同天的天气</string>
    <string name="home">主页</string>
    <string name="mine">我的</string>

    <string name="search_hint">输入你想查询的城市名</string>
    <string name="city">西安</string>

    <string name="date">日期</string>
    <string name="weather">天气</string>
    <string name="tem_high">高温</string>
    <string name="tem_low">低温</string>
    <string name="win">风向</string>
    <string name="win_speed">风级</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>