<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity">

    <TextView
        android:id="@+id/tv_content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/welcome_register"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_content"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/register"
        app:layout_constraintTop_toTopOf="@+id/tv_content1" />

    <LinearLayout
        android:id="@+id/ll_content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/iv_content">

        <TextView
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/account_register"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/account_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_content1">

        <TextView
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/password_register"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_content3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_content2">

        <TextView
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/password_ensure"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password_ensure"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_ensure_hint"
            android:inputType="textPassword" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/cb_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_content3"
        android:text="同意用户协议"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/cb_agreement" />


</androidx.constraintlayout.widget.ConstraintLayout>